[package]
name = "a0kzg"
version = "0.1.1"
description = "ZKG polinomial commitments playground"
repository = "https://github.com/adria0/a0kzg"
documentation = "https://docs.rs/a0kzg/"
license = "MIT/Apache-2.0"
authors = ["Adria Massanet <adriamassanet@gmail.com>"]
edition = "2018"
keywords = ["cryptography", "bls12-381", "KZG"] 

[dependencies]
bls12_381 = "0.5"
num-bigint = "0.4"
rand = "0.8"

[dev-dependencies]
criterion = "0.3"
once_cell= "1.8"

[[bench]]
name = "benchmarks"
harness = false

